
  IMPROVEMENTS

  * ISSUE 92: improved the representation of the types of 'optional' fields from the BAM, and their encoding
    in the 'attributes' field of ADAMRecord.  This encoding now includes the type, and should no longer be 
    lossy, therefore making it possible to write code to re-export a BAM from the ADAM file in the future.

  * Added code to reference region model that allowed for the creation of regions from individual reads, and
    that allowed for adjacent non-overlapping regions to merge together. This was added in PR#73.

  * Added code to the projection package which allows for the creation of an inverse projection from a given
    projection. This was added in PR#61.

  * CLI option printout width was increased to 150 characters to improve display on large monitors. This was
    added by PR#91.

  * Various build improvements were added by PR#68 and PR#66.

  BUG FIXES

  * Fixed issues where VCF header was not being written correctly. This prevented variant calls from being
    written after conversion. This was fixed in PR#85.

  * Fixed a possible issue where pileup generation may have been ignoring reference ID when grouping pileups
    into rods. This was in PR#86. This necessitated changing the ADAMRod model which was introduced in PR#36;
    however, this is not an API breaking change as ADAMRod did not show up in a previous release.

  * Fixed code which performed Hadoop 1 incompatible HDFS access. This was fixed in PR#76.

  * Added Y as a valid base inside of the MdTag utility. The omission of this base caused BAM file import to
    fail for some datasets. This was addressed in PR#56. This change was propegated more widely across the
    API by PR#48.

  BREAKING CHANGES

  * ADAMFasta was changed to ADAMNucleotideContig, and internal field types and names were changed in PR #79.

  * When optimizing phred --> double calculation, several public methods in the PhredUtils were renamed to clarify
    their operations.